# agentfuel_paper

./: .gitignore  README.md  collect_scores.py  config.py  evaluate.py  main.py  pyproject.toml  results.csv
agents/dbrx/: runner.py
agents/nao/: runner.py
agents/pandasai/: runner.py
agents/rflangchain/: runner.py
agents/snow/: runner.py
configs/: config.yaml
configs/agent/: dbrx_ecommerce_stateful_no_context.yaml  dbrx_iot_stateful_no_context.yaml  dbrx_telecom_incident_no_context.yaml  dbrx_telecom_no_context.yaml  dbrx_wind_data_no_context.yaml  nao_openai.yaml  (+12 more)
experimental/: README.md  analyze_beaver.ipynb  analyze_bird_livesqlbench-base-full-v1.ipynb  analyze_kramabench.ipynb  analyze_spider2_snow.ipynb  download_spider2_snow.py  livesqlbench_data.jsonl  manual_benchmarks.py  run_pandasai_manual_benchmarks.py  single_pandasai_check.py  spider2snow_gold_sql.csv  utils.py
huggingface/: README.md
orig_data/: README.md  bitcoin.csv  cell_site_data.csv  cell_site_with_inc_data.csv  collect_influx_sample_data.py  core_node_data.csv  core_node_with_inc_data.csv  ecommerce_sessions_data.csv  ecommerce_users_data.csv  generate_rf_ecommerce_data.py  generate_rf_iot_data.py  generate_rf_telecom_ran_data.py  requirements_rf.txt  transport_link_data.csv  transport_link_with_inc_data.csv  weather.csv  wind_data.csv
workload_data/: ecommerce_basic.csv  ecommerce_stateful.csv  generate_basic_rf_test_suite.py  generate_stateful_rf_test_suite.py  iot_basic.csv  iot_stateful.csv  prepare_workload_data.py  telecom_basic.csv  telecom_incident.csv  wind_data_test.csv
(+22 files in other folders)
